--- a/目录/03.主窗体与碎片.md
+++ b/目录/03.主窗体与碎片.md
@@ -6,7 +6,7 @@
 
 ##### Activity:主窗体
 
-###### 生命周期：![1563606871899](C:\Users\Sir.L\AppData\Roaming\Typora\typora-user-images\1563606871899.png)
+###### 生命周期：![Activity](../image/Activity.png)
 
 |    方法     |                             说明                             |
 | :---------: | :----------------------------------------------------------: |
@@ -45,7 +45,7 @@
 
 ##### Fragment:碎片
 
-###### 生命周期：![1563608874419](C:\Users\Sir.L\AppData\Roaming\Typora\typora-user-images\1563608874419.png)
+###### 生命周期：![Fragment](../image/Fragment.png)
 
 |        方法         |                             说明                             |
 | :-----------------: | :----------------------------------------------------------: |
